crates/ty_server/tests/e2e/snapshots/e2e__notebook__auto_import_docstring.snap
---
source: crates/ty_server/tests/e2e/notebook.rs
expression: completions
---
[
  {
    "label": "Literal (import typing)",
    "kind": 6,
    "sortText": "[RANKING]",
    "insertText": "Literal",
    "additionalTextEdits": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 0
          },
          "end": {
            "line": 1,
            "character": 0
          }
        },
        "newText": "from typing import Literal\n"
      }
    ]
  },
  {
    "label": "LiteralString (import typing)",
    "kind": 6,
    "sortText": "[RANKING]",
    "insertText": "LiteralString",
    "additionalTextEdits": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 0
          },
          "end": {
            "line": 1,
            "character": 0
          }
        },
        "newText": "from typing import LiteralString\n"
      }
    ]
  },
  {
    "label": "Literal (import typing_extensions)",
    "kind": 6,
    "sortText": "[RANKING]",
    "insertText": "Literal",
    "additionalTextEdits": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 0
          },
          "end": {
            "line": 1,
            "character": 0
          }
        },
        "newText": "from typing_extensions import Literal\n"
      }
    ]
  },
  {
    "label": "LiteralString (import typing_extensions)",
    "kind": 6,
    "sortText": "[RANKING]",
    "insertText": "LiteralString",
    "additionalTextEdits": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 0
          },
          "end": {
            "line": 1,
            "character": 0
          }
        },
        "newText": "from typing_extensions import LiteralString\n"
      }
    ]
  }
]
