crates/ty_server/tests/e2e/snapshots/e2e__notebook__publish_unreachable_code_diagnostics_open.snap
---
source: crates/ty_server/tests/e2e/notebook.rs
expression: diagnostics
---
{
  "vscode-notebook-cell://test.ipynb#0": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 23
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "Code is always unreachable",
      "tags": [
        1
      ]
    }
  ]
}
