crates/ty_server/tests/e2e/snapshots/e2e__notebook__publish_unused_binding_diagnostics_open.snap
---
source: crates/ty_server/tests/e2e/notebook.rs
expression: diagnostics
---
{
  "vscode-notebook-cell://test.ipynb#0": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 4
        },
        "end": {
          "line": 1,
          "character": 5
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "`x` is unused",
      "tags": [
        1
      ]
    }
  ]
}
