crates/ty_server/tests/e2e/snapshots/e2e__notebook__semantic_tokens.snap
---
source: crates/ty_server/tests/e2e/notebook.rs
expression: "[cell1_tokens, cell2_tokens, cell3_tokens]"
---
[
  {
    "data": [
      0,
      5,
      6,
      0,
      0,
      0,
      14,
      7,
      5,
      0,
      2,
      5,
      5,
      1,
      1,
      0,
      8,
      7,
      5,
      0,
      0,
      8,
      8,
      10,
      0,
      0,
      10,
      6,
      10,
      0,
      0,
      8,
      11,
      10,
      0
    ]
  },
  {
    "data": [
      0,
      4,
      10,
      7,
      1,
      0,
      11,
      4,
      2,
      1,
      0,
      6,
      3,
      1,
      0,
      0,
      5,
      4,
      2,
      1,
      0,
      6,
      5,
      2,
      1,
      0,
      7,
      5,
      1,
      0,
      0,
      10,
      3,
      1,
      0,
      1,
      7,
      5,
      2,
      0,
      0,
      9,
      8,
      10,
      0,
      1,
      15,
      4,
      2,
      0,
      0,
      5,
      7,
      8,
      0,
      0,
      8,
      4,
      2,
      0,
      0,
      8,
      1,
      10,
      0,
      0,
      2,
      4,
      2,
      0,
      0,
      5,
      1,
      10,
      0,
      1,
      9,
      5,
      2,
      0,
      0,
      9,
      6,
      10,
      0,
      1,
      15,
      4,
      2,
      0,
      0,
      5,
      7,
      8,
      0,
      0,
      8,
      4,
      2,
      0,
      0,
      8,
      2,
      10,
      0,
      0,
      3,
      4,
      2,
      0,
      0,
      5,
      2,
      10,
      0,
      2,
      4,
      8,
      5,
      1,
      0,
      11,
      4,
      2,
      0,
      0,
      5,
      4,
      8,
      0,
      0,
      5,
      4,
      2,
      0,
      1,
      4,
      6,
      5,
      1,
      0,
      9,
      4,
      2,
      0,
      0,
      7,
      4,
      10,
      0,
      1,
      4,
      6,
      5,
      0,
      0,
      10,
      3,
      10,
      0,
      0,
      6,
      8,
      5,
      0,
      1,
      4,
      6,
      5,
      0,
      0,
      10,
      3,
      10,
      0,
      0,
      6,
      3,
      7,
      0,
      0,
      4,
      4,
      2,
      0
    ]
  },
  {
    "data": [
      0,
      0,
      5,
      7,
      0,
      0,
      6,
      10,
      7,
      0,
      0,
      11,
      39,
      10,
      0,
      0,
      41,
      6,
      10,
      0,
      0,
      8,
      12,
      10,
      0
    ]
  }
]
