crates/ty_server/tests/e2e/snapshots/e2e__notebook__undefined_reveal_fix_stays_in_cell.snap
---
source: crates/ty_server/tests/e2e/notebook.rs
expression: diagnostics
---
{
  "vscode-notebook-cell://test.ipynb#0": [],
  "vscode-notebook-cell://test.ipynb#1": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 0
        },
        "end": {
          "line": 1,
          "character": 11
        }
      },
      "severity": 2,
      "code": "undefined-reveal",
      "codeDescription": {
        "href": "https://ty.dev/rules#undefined-reveal"
      },
      "source": "ty",
      "message": "`reveal_type` used without importing it\n\ninfo: This is allowed for debugging convenience but will fail at runtime\nhelp: Import `reveal_type` from `typing`",
      "data": {
        "edits": {
          "vscode-notebook-cell://test.ipynb#1": [
            {
              "newText": "from typing import reveal_type\n",
              "range": {
                "end": {
                  "character": 0,
                  "line": 1
                },
                "start": {
                  "character": 0,
                  "line": 1
                }
              }
            }
          ]
        },
        "fix_title": "Import `reveal_type` from `typing`",
        "preferred": false
      }
    },
    {
      "range": {
        "start": {
          "line": 1,
          "character": 12
        },
        "end": {
          "line": 1,
          "character": 13
        }
      },
      "severity": 3,
      "code": "revealed-type",
      "source": "ty",
      "message": "Revealed type: `Literal[1]`"
    }
  ]
}
